--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@capacitor/core": "^1.4.0",
+    "@ionic/core": "^4.11.7",
     "localforage": "^1.7.3",
     "sirv-cli": "^0.4.4",
     "svelte-custom-elements": "^1.0.2",
