--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,42 +8,42 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/assets/great-success.png",
+            "src": "assets/img/great-success.png",
             "sizes": "512x512",
             "type": "image/png"
         }
