Service worker experiments

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "IOnic Svelte App",
+    "name": "Ionic Svelte App",
     "short_name": "IonicSvelte",
     "theme_color": "#1976d2",
     "background_color": "#fafafa",
