--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "localforage": "^1.7.3",
     "sirv-cli": "^0.4.4",
     "svelte-custom-elements": "^1.0.2",
-    "svelte-routing": "^1.4.0"
+    "svelte-routing": "^1.4.0",
+    "workbox-window": "^4.3.1"
   }
 }
