--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@capacitor/core": "^1.4.0",
     "@ionic/core": "^4.11.7",
     "localforage": "^1.7.3",
+    "rxjs": "^6.5.3",
     "sirv-cli": "^0.4.4",
     "svelte-custom-elements": "^1.0.2",
     "svelte-routing": "^1.4.0",
+    "svelte-ts-preprocess": "^1.1.3",
     "workbox-window": "^4.3.1"
   }
 }
