--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "workbox injectManifest src/sw-config.js && rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
-  },
-  "devDependencies": {
-    "rollup": "^1.12.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-delete": "^1.1.0",
-    "rollup-plugin-dev": "^1.1.1",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
-    "@capacitor/core": "^1.4.0",
-    "@ionic/core": "^4.11.7",
-    "localforage": "^1.7.3",
-    "rxjs": "^6.5.3",
-    "sirv-cli": "^0.4.4",
-    "svelte-custom-elements": "^1.0.2",
-    "svelte-routing": "^1.4.0",
-    "svelte-ts-preprocess": "^1.1.3",
-    "workbox-window": "^4.3.1"
-  }
+    "name": "ionic-ui-dev-companion",
+    "version": "1.0.0",
+    "scripts": {
+        "build": "workbox injectManifest src/sw-config.js && rollup -c",
+        "dev": "rollup -c -w",
+        "start": "sirv public"
+    },
+    "devDependencies": {
+        "firebase": "^7.5.2",
+        "rollup": "^1.27.9",
+        "rollup-plugin-commonjs": "^10.0.0",
+        "rollup-plugin-copy": "^3.1.0",
+        "rollup-plugin-delete": "^1.1.0",
+        "rollup-plugin-dev": "^1.1.1",
+        "rollup-plugin-livereload": "^1.0.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-svelte": "^5.0.3",
+        "rollup-plugin-terser": "^5.1.3",
+        "sirv-cli": "^0.4.4",
+        "svelte": "^3.16.3",
+        "sveltefire": "^0.1.0"
+    },
+    "dependencies": {
+        "@capacitor/core": "^1.4.0",
+        "localforage": "^1.7.3",
+        "rxjs": "^6.5.3",
+        "svelte-custom-elements": "^1.0.2",
+        "svelte-routing": "^1.4.0",
+        "workbox-window": "^4.3.1"
+    }
 }
