--- a/public/assets/json/api-mappings.json
+++ b/public/assets/json/api-mappings.json
@@ -5,5 +5,6 @@
     "tabsmusic": "tabs",
     "infinitescroll": "infinite-scroll",
     "slide": "slides",
-    "icon": "https://ionicons.com/"
+    "icon": "https://ionicons.com/",
+    "skeleton": "skeleton-text"
 }
