--- a/src/assets/json/api-mappings.json
+++ b/src/assets/json/api-mappings.json
@@ -7,5 +7,6 @@
     "slide": "slides",
     "icon": "https://ionicons.com/",
     "skeleton": "skeleton-text",
-    "pane": "https://github.com/roman-rr/cupertino-pane"
+    "pane": "https://github.com/roman-rr/cupertino-pane",
+    "timeline": "https://bootsnipp.com/snippets/Q0ppE"
 }
