--- a/src/assets/json/api-mappings.json
+++ b/src/assets/json/api-mappings.json
@@ -8,5 +8,6 @@
     "icon": "https://ionicons.com/",
     "skeleton": "skeleton-text",
     "pane": "https://github.com/roman-rr/cupertino-pane",
-    "timeline": "https://bootsnipp.com/snippets/Q0ppE"
+    "timeline": "https://bootsnipp.com/snippets/Q0ppE",
+    "progressbar": "progress-bar"
 }
