--- a/src/assets/json/api-mappings.json
+++ b/src/assets/json/api-mappings.json
@@ -9,5 +9,6 @@
     "skeleton": "skeleton-text",
     "pane": "https://github.com/roman-rr/cupertino-pane",
     "timeline": "https://bootsnipp.com/snippets/Q0ppE",
-    "progressbar": "progress-bar"
+    "progressbar": "progress-bar",
+    "splash": "https://www.youtube.com/watch?v=QTmkibc3WcI"
 }
