--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
         "start": "sirv public --single"
     },
     "devDependencies": {
-        "@capacitor/core": "^1.4.0",
-        "@fortawesome/fontawesome-free": "^5.12.0",
-        "@rollup/plugin-node-resolve": "^6.0.0",
-        "@sveltech/routify": "next",
-        "firebase": "^7.5.2",
-        "localforage": "^1.7.3",
-        "npm-run-all": "^4.1.5",
-        "rollup": "^1.27.9",
-        "rollup-plugin-commonjs": "^10.0.0",
-        "rollup-plugin-copy": "^3.1.0",
-        "rollup-plugin-delete": "^1.1.0",
-        "rollup-plugin-dev": "^1.1.1",
-        "rollup-plugin-livereload": "^1.0.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-svelte": "^5.0.3",
-        "rollup-plugin-terser": "^5.1.3",
-        "rxjs": "^6.5.3",
-        "svelte": "^3.16.3",
-        "sveltefire": "^0.1.0"
+        "@capacitor/core": "2.2.1",
+        "@fortawesome/fontawesome-free": "5.13.1",
+        "@rollup/plugin-node-resolve": "8.1.0",
+        "@sveltech/routify": "1.9.2",
+        "firebase": "7.15.5",
+        "localforage": "1.7.4",
+        "npm-run-all": "4.1.5",
+        "rollup": "2.20.0",
+        "rollup-plugin-commonjs": "10.1.0",
+        "rollup-plugin-copy": "3.3.0",
+        "rollup-plugin-delete": "2.0.0",
+        "rollup-plugin-dev": "1.1.2",
+        "rollup-plugin-livereload": "1.3.0",
+        "rollup-plugin-node-resolve": "5.2.0",
+        "rollup-plugin-svelte": "5.2.3",
+        "rollup-plugin-terser": "6.1.0",
+        "rxjs": "6.6.0",
+        "svelte": "3.23.2",
+        "sveltefire": "0.1.4"
     },
     "dependencies": {
-        "cupertino-pane": "^1.0.71",
-        "sirv-cli": "^0.4.4",
-        "svelte-custom-elements": "^1.0.2"
+        "@ionic/core": "5.2.3",
+        "cupertino-pane": "1.1.652",
+        "sirv-cli": "1.0.3",
+        "svelte-custom-elements": "1.0.2"
     }
 }
