Stil not working

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@capacitor/core": "2.2.1",
         "@fortawesome/fontawesome-free": "5.13.1",
         "@rollup/plugin-node-resolve": "8.1.0",
+        "@rollup/plugin-typescript": "^5.0.2",
         "@sveltech/routify": "1.9.2",
         "@tsconfig/svelte": "^1.0.10",
         "firebase": "7.15.5",
@@ -29,14 +30,14 @@
         "rollup-plugin-terser": "6.1.0",
         "rxjs": "6.6.0",
         "svelte": "3.23.2",
-        "svelte-check": "^1.0.30",
+        "svelte-check": "^1.0.31",
         "svelte-preprocess": "^4.2.0",
         "sveltefire": "0.1.4",
+        "tslib": "^2.0.1",
         "typescript": "^4.0.2"
     },
     "dependencies": {
         "@ionic/core": "5.2.3",
-        "@rollup/plugin-typescript": "^5.0.2",
         "cupertino-pane": "1.1.652",
         "sirv-cli": "1.0.3",
         "svelte-custom-elements": "1.0.2",
