--- a/package.json
+++ b/package.json
@@ -12,15 +12,10 @@
         "deploy": "rollup -c && firebase deploy"
     },
     "devDependencies": {
-        "@capacitor/core": "^2.4.0",
-        "@ionic/core": "^5.3.2",
         "@rollup/plugin-commonjs": "^14.0.0",
         "@rollup/plugin-node-resolve": "^8.0.0",
         "@rollup/plugin-typescript": "^4.0.0",
         "@tsconfig/svelte": "^1.0.0",
-        "cupertino-pane": "^1.1.81",
-        "firebase": "^7.19.1",
-        "localforage": "^1.9.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.5",
         "prettier-plugin-svelte": "^1.2.0",
@@ -30,17 +25,22 @@
         "rollup-plugin-livereload": "^2.0.0",
         "rollup-plugin-svelte": "^6.0.0",
         "rollup-plugin-terser": "^7.0.0",
-        "rxjs": "^6.6.2",
+        "sirv-cli": "^1.0.0",
         "svelte": "^3.0.0",
         "svelte-check": "^1.0.0",
-        "svelte-custom-elements": "^1.0.2",
         "svelte-preprocess": "^4.0.0",
         "tslib": "^2.0.0",
         "typescript": "^3.9.3"
     },
     "dependencies": {
-        "@roxi/routify": "^2.0.0",
-        "sirv-cli": "^1.0.0"
+        "cupertino-pane": "^1.1.81",
+        "firebase": "^7.19.1",
+        "localforage": "^1.9.0",
+        "@capacitor/core": "^2.4.0",
+        "@ionic/core": "^5.3.2",
+        "@roxi/routify": "^2.1.2",
+        "svelte-custom-elements": "^1.0.2",
+        "rxjs": "^6.6.2"
     },
     "routify": {
         "routifyDir": "src/routes"
