--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
         "typescript": "^3.9.3"
     },
     "dependencies": {
-        "cupertino-pane": "^1.1.81",
-        "firebase": "^7.19.1",
-        "localforage": "^1.9.0",
         "@capacitor/core": "^2.4.0",
         "@ionic/core": "^5.3.2",
         "@roxi/routify": "^2.1.2",
-        "svelte-custom-elements": "^1.0.2",
-        "rxjs": "^6.6.2"
+        "cupertino-pane": "^1.1.81",
+        "firebase": "^7.19.1",
+        "localforage": "^1.9.0",
+        "rxjs": "^6.6.2",
+        "svelte-custom-elements": "^1.0.2"
     },
     "routify": {
         "routifyDir": "src/routes"
