--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-    "svelteSortOrder": "styles-scripts-markup",
+    "svelteSortOrder": "markup-styles-scripts",
     "svelteStrictMode": true,
     "svelteBracketNewLine": true,
     "svelteAllowShorthand": false,
