--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@rollup/plugin-node-resolve": "^8.0.0",
         "@rollup/plugin-typescript": "^4.0.0",
         "@tsconfig/svelte": "^1.0.0",
+        "@types/faker": "^5.5.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.5",
         "prettier-plugin-svelte": "^1.2.0",
@@ -37,7 +38,10 @@
         "@ionic/core": "^5.3.2",
         "@roxi/routify": "^2.1.2",
         "cupertino-pane": "^1.1.92",
+        "faker": "^5.5.2",
         "firebase": "^7.19.1",
+        "fuse.js": "^6.4.6",
+        "json-graphql-server": "^2.2.2",
         "localforage": "^1.9.0",
         "rxjs": "^6.6.2",
         "svelte-custom-elements": "^1.0.2"
